@@ -2,6 +2,7 @@ package com.gmail.nossr50.util;
 
 import com.gmail.nossr50.commands.skills.McMMOWebLinks;
 import com.gmail.nossr50.config.AdvancedConfig;
+import com.gmail.nossr50.config.Config;
 import com.gmail.nossr50.datatypes.interactions.NotificationType;
 import com.gmail.nossr50.datatypes.json.McMMOUrl;
 import com.gmail.nossr50.datatypes.skills.PrimarySkill;
@@ -32,6 +33,9 @@ public class TextComponentFactory {
     }
 
     public static void sendPlayerUrlHeader(Player player) {
+        if(!Config.getInstance().getUrlLinksEnabled())
+            return;
+
         Player.Spigot spigotPlayer = player.spigot();
 
         if(webComponents != null)
